# quadropong

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  client.py  config.toml  docker-compose.yaml  game.py
.github/workflows/: ci.yml
src/: README.md  lib.rs  main.rs
src/api/: handlers.rs  mod.rs
src/client/: app.rs  config.rs  error.rs  mod.rs  settings.rs
src/client/net/: error.rs  tcp.rs  udp.rs
src/client/states/: create_or_join_lobby.rs  game_board.rs  game_end.rs  lobby.rs  menu.rs  mod.rs  quit.rs  settings.rs  training.rs  traits.rs
src/client/states/utils/: input.rs  mod.rs  render.rs  slider.rs  widget.rs
src/common/: game_error.rs  mod.rs
src/common/game_loop/: message_handler.rs  mod.rs
src/common/models/: ball.rs  client_input.rs  game.rs  game_rooms.rs  mod.rs  player.rs
src/common/models/dto/: ball_dto.rs  game_dto.rs  player_dto.rs
src/error/: mod.rs
src/game_loop/: message_handler.rs
src/game_models/: client_input.rs  game.rs  mod.rs  player.rs
src/game_models/dto/: ball_dto.rs  mod.rs  player_dto.rs
src/models/: ball.rs  client_input.rs  game.rs  game_rooms.rs  mod.rs  player.rs
src/models/dto/: ball_dto.rs  game_dto.rs  mod.rs  player_dto.rs
src/net/: error.rs  mod.rs  tcp.rs  udp.rs
src/server/api/: handlers.rs  mod.rs
src/states/: create_or_join_lobby.rs  game_board.rs  lobby.rs  menu.rs  mod.rs  quit.rs  settings.rs  training.rs  traits.rs  utils.rs
src/states/utils/: input.rs  render.rs
src/ui/: app.rs  ui.rs
src/ui2/: mod.rs
src/ui2/game_models/: ball.rs
src/ui2/states/: create_lobby.rs  create_or_join_lobby.rs  lobby.rs  menu.rs  mod.rs  settings.rs  traits.rs  utils.rs
