[package]
name = "quadropong"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
chrono = { version = "0.4.39", features = ["serde"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
