[package]
name = "quadropong"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
chrono = { version = "0.4.39", features = ["serde"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["serde"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
tokio = { version = "1.43.0", features = ["full", "macros", "rt-multi-thread"] }
reqwest = "0.12.12"
serde_json = "1.0.136"
async-trait = "0.1.85"
thiserror = "2.0.11"
env_logger = "0.11.5"
log = "0.4.22"
arboard = "3.4.1"
dirs = "6.0.0"
rand = "0.9.0"
tokio-util = "0.7.13"
fern = "0.7.1"
futures-util = "0.3.31"
mockito = "1.6.1"
tower-test = "0.4.0"
hyper = "1.6.0"
tower = "0.5.2"
http = "1.2.0"
http-body-util = "0.1.2"
